[package]
name = "avm"
version = "0.5.1"
authors = ["Jan Schulte <hello@unexpected-co.de>"]
license = "MIT"
description = "Manages node.js installations"
repository = "https://github.com/schultyy/avm"
[dependencies]
hyper="0.6.10"
regex="0.1.41"
os_type="0.5.0"
term = "0.2"
rustc-serialize = "0.3"
semver = "0.2.0"
